# Hozy

./: .gitignore  CMakeLists.txt  README.md
include/: EventManager.hpp  Module.hpp  ModuleManager.hpp  Server.hpp  SingletonManager.hpp  ThreadManager.hpp
include/client/: ConfigClient.hpp
include/data/server/: Client.hpp
include/network/: ModuleNetwork.hpp  NetAddress.hpp  Packet.hpp  PacketType.hpp  ServerTcp.hpp  SocketTcp.hpp
include/network/client/: ModuleNetworkClient.hpp
include/network/server/: ClientSelector.hpp  MenuClient.hpp  ModuleNetworkServer.hpp  UnauthenticatedClient.hpp
include/os/unix/: DebugImpl_unix.hpp  MutexImpl_unix.hpp  NetAddressImpl_unix.hpp  SocketTcpImpl_unix.hpp  ThreadImpl_unix.hpp
include/os/win32/: DebugImpl_win32.hpp  Debug_win32.hpp  MutexImpl_win32.hpp  NetAddressImpl_win32.hpp  ThreadImpl_win32.hpp
include/server/: Server.hpp
include/tool/: Buffer.hpp  CircularBuffer.hpp  Config.hpp  ConfigData.hpp  Convert.hpp  Debug.hpp  Function.hpp  Mutex.hpp  Singleton.hpp  Thread.hpp
include/tool/error/: ErrorCode.hpp  ErrorManager.hpp  ErrorMessage.hpp  Exception.hpp
include/tool/log/: AbstractLog.hpp  Log.hpp  LogFile.hpp  LogStream.hpp
include/view/: ModuleView.hpp
src/: MainClient.cpp  MainServer.cpp  Module.cpp  ModuleManager.cpp  Server.cpp  SingletonManager.cpp  ThreadManager.cpp  main.cpp
src/client/: ConfigClient.cpp  MainClient.cpp
src/data/server/: Client.cpp
src/network/: ModuleNetwork.cpp  NetAddress.cpp  Packet.cpp  ServerTcp.cpp  SocketTcp.cpp
src/network/client/: ModuleNetworkClient.cpp
src/network/server/: ClientSelector.cpp  MenuClient.cpp  ModuleNetworkServer.cpp  UnauthenticatedClient.cpp
src/os/unix/: DebugImpl_unix.cpp  MutexImpl_unix.cpp  NetAddressImpl_unix.cpp  SocketTcpImpl_unix.cpp  ThreadImpl_unix.cpp
src/os/win32/: DebugImpl_win32.cpp  Debug_win32.cpp  (+4 more)
src/server/: MainServer.cpp  Server.cpp
src/tool/: Config.cpp  ConfigData.cpp  Debug.cpp  Mutex.cpp  SingletonManager.cpp  Thread.cpp
src/view/: ModuleView.cpp
(+7 files in other folders)
